title component e star er kaj kora hoise

--- a/src/app/title/title.component.html
+++ b/src/app/title/title.component.html
@@ -1,1 +1,7 @@
-<p>title works!</p>
+
+                 
+                <span id="X" class="glyphicon "
+                      [class.glyphicon-star] ="StarState"
+                      [class.glyphicon-star-empty]="!StarState"
+                
+                (click)="ClickOnStar()"></span>
