--- a/src/app/favourite/favourite.component.html
+++ b/src/app/favourite/favourite.component.html
@@ -1,2 +1,2 @@
-<button id="x" class="glyglyphicon" [class.glyphicon-heart]="star" [class.glyphicon-heart-empty]="!star"
-  (click)="onclick()"></button>
+<span id="x" class="glyglyphicon" [class.glyphicon-heart]="star" [class.glyphicon-heart-empty]="!star"
+  (click)="onclick()" ></span>
