input property for Component Api was done

--- a/src/app/title/title.component.html
+++ b/src/app/title/title.component.html
@@ -1,7 +1,7 @@
 
                  
                 <span id="X" class="glyphicon "
-                      [class.glyphicon-star] ="StarState"
-                      [class.glyphicon-star-empty]="!StarState"
+                      [class.glyphicon-star] ="isSelected"
+                      [class.glyphicon-star-empty]="!isSelected"
                 
                 (click)="ClickOnStar()"></span>
