all about output and eventEmitter

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -299,9 +299,9 @@
 <courses></courses>
 -->
 
-<app-title></app-title>
+<app-title [isFavourite]="post.isSelected" (change)="OnisFavouriteChanged()"></app-title>
 
-<courses></courses>
+
 
 
 
